--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -480,73 +480,76 @@ jobs:
           DEFAULT_JDK: ${{ needs.parameters.outputs.jre_version }}
           MAVEN_THREADS: ${{ inputs.useMavenThreads }}
         run: ./publish-app.sh "stream-applications" "applications/source/${{ matrix.app }}"
-    release-train:
-      needs:
-        - core
-        - parameters
-        - scale-runners-up
-      runs-on: 'stream-ci'
-      steps:
-        - name: 'Configure: checkout stream-applications'
-          uses: actions/checkout@v3
-          with:
-            ref: 'main'
-        - name: 'Configure: checkout stream-applications@${{ inputs.branch }}'
-          uses: actions/checkout@v3
-          with:
-            ref: ${{ inputs.branch }}
-            path: 'stream-applications'
-        - name: Ensure scripts are executable
-          shell: bash
-          run: find . -type f -name "*.sh" -exec chmod a+x '{}' \;
-        - name: 'Configure: Install Java'
-          if: ${{ needs.parameters.outputs.jdk_build == '8' }}
-          uses: actions/setup-java@v1
-          with:
-            java-version: ${{ needs.parameters.outputs.jdk_build }}
-        - name: 'Configure: Install GraalVM'
-          if: ${{ needs.parameters.outputs.jdk_build != '8' }}
-          uses: graalvm/setup-graalvm@v1
-          with:
-            version: 'latest'
-            java-version: ${{ needs.parameters.outputs.jdk_build }}
-            #          components: 'native-image' # add when starting native builds.
-            github-token: ${{ secrets.GITHUB_TOKEN }}
-        - name: 'Configure: cache for maven dependencies'
-          uses: actions/cache@v3
-          with:
-            path: ~/.m2/repository
-            key: maven-repo-${{ hashFiles('**/pom.xml') }}-8-single-${{ inputs.branch }}
-            restore-keys: |
-              maven-repo-${{ hashFiles('**/pom.xml') }}-8-${{ inputs.branch }}
-              maven-repo-${{ hashFiles('**/pom.xml') }}-${{ inputs.branch }}
-              maven-repo-${{ inputs.branch }}
-        - name: 'Configure: Install Pack'
-          uses: ./.github/actions/install-pack
-        - name: 'Build: stream-applications-release-train'
-          shell: bash
-          env:
-            ARTIFACTORY_USERNAME: ${{ secrets.ARTIFACTORY_USERNAME }}
-            ARTIFACTORY_PASSWORD: ${{ secrets.ARTIFACTORY_PASSWORD }}
-            DEFAULT_JDK: ${{ needs.parameters.outputs.jre_version }}
-            MAVEN_THREADS: ${{ inputs.useMavenThreads }}
-          run: |
-            ROOT_DIR=$(realpath $PWD)
-            pushd stream-applications > /dev/null
-              echo "::notice ::building - stream-applications-release-train"
-              set -e
-              $ROOT_DIR/build-folder.sh stream-applications-release-train "install verify deploy"
-              set +e
-              echo "::notice ::stream-applications-release-train build completed"
-            popd > /dev/null
-        - name: 'Upload: Error logs'
-          if: ${{ failure() }}
-          uses: actions/upload-artifact@v3
-          with:
-            name: '${{ matrix.app }}-surefire-reports'
-            path: '**/target/surefire-reports'
-            retention-days: 7
-            if-no-files-found: ignore
+  release-train:
+    needs:
+      - core
+      - sinks
+      - sources
+      - processors
+      - parameters
+      - scale-runners-up
+    runs-on: 'stream-ci'
+    steps:
+      - name: 'Configure: checkout stream-applications'
+        uses: actions/checkout@v3
+        with:
+          ref: 'main'
+      - name: 'Configure: checkout stream-applications@${{ inputs.branch }}'
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ inputs.branch }}
+          path: 'stream-applications'
+      - name: Ensure scripts are executable
+        shell: bash
+        run: find . -type f -name "*.sh" -exec chmod a+x '{}' \;
+      - name: 'Configure: Install Java'
+        if: ${{ needs.parameters.outputs.jdk_build == '8' }}
+        uses: actions/setup-java@v1
+        with:
+          java-version: ${{ needs.parameters.outputs.jdk_build }}
+      - name: 'Configure: Install GraalVM'
+        if: ${{ needs.parameters.outputs.jdk_build != '8' }}
+        uses: graalvm/setup-graalvm@v1
+        with:
+          version: 'latest'
+          java-version: ${{ needs.parameters.outputs.jdk_build }}
+          #          components: 'native-image' # add when starting native builds.
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: 'Configure: cache for maven dependencies'
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2/repository
+          key: maven-repo-${{ hashFiles('**/pom.xml') }}-8-single-${{ inputs.branch }}
+          restore-keys: |
+            maven-repo-${{ hashFiles('**/pom.xml') }}-8-${{ inputs.branch }}
+            maven-repo-${{ hashFiles('**/pom.xml') }}-${{ inputs.branch }}
+            maven-repo-${{ inputs.branch }}
+      - name: 'Configure: Install Pack'
+        uses: ./.github/actions/install-pack
+      - name: 'Build: stream-applications-release-train'
+        shell: bash
+        env:
+          ARTIFACTORY_USERNAME: ${{ secrets.ARTIFACTORY_USERNAME }}
+          ARTIFACTORY_PASSWORD: ${{ secrets.ARTIFACTORY_PASSWORD }}
+          DEFAULT_JDK: ${{ needs.parameters.outputs.jre_version }}
+          MAVEN_THREADS: ${{ inputs.useMavenThreads }}
+        run: |
+          ROOT_DIR=$(realpath $PWD)
+          pushd stream-applications > /dev/null
+            echo "::notice ::building - stream-applications-release-train"
+            set -e
+            $ROOT_DIR/build-folder.sh stream-applications-release-train "install verify deploy"
+            set +e
+            echo "::notice ::stream-applications-release-train build completed"
+          popd > /dev/null
+      - name: 'Upload: Error logs'
+        if: ${{ failure() }}
+        uses: actions/upload-artifact@v3
+        with:
+          name: '${{ matrix.app }}-surefire-reports'
+          path: '**/target/surefire-reports'
+          retention-days: 7
+          if-no-files-found: ignore
   rerun-jobs:
     if: ${{ failure() && github.run_attempt == '1' }}
     runs-on: ubuntu-latest
@@ -581,7 +584,9 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - parameters
-      - release-train
+      - sinks
+      - sources
+      - processors
     concurrency:
       group: stream-apps-gh-runners
       cancel-in-progress: false
