GH-370: Enable ScriptProcessor tests back
Fixes https://github.com/spring-cloud/stream-applications/issues/370

* Update dependencies for `script-processor`
* Add `maven-surefire-plugin` to `script-processor` POM
and specify `--add-opens` for Ruby requirements
* Mark all JavaScript tests with `@EnabledIfSystemProperty`
against `org.graalvm.language.js.home` which is available only
if GraalVM with `js` component enabled
* Fix `NewlineAtEndOfFile` rule for Checkstyle since on Windows
the line end is `crlf`
* Add `components: 'js'` to GraalVM installation steps for all the GH action scripts

--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -186,7 +186,7 @@ jobs:
         with:
           version: 'latest'
           java-version: ${{ needs.parameters.outputs.jdk_build }}
-#          components: 'native-image' # add when starting native builds.
+          components: 'js'
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Configure: cache for maven dependencies'
         uses: actions/cache@v3
@@ -277,7 +277,7 @@ jobs:
         with:
           version: 'latest'
           java-version: ${{ needs.parameters.outputs.jdk_build }}
-#          components: 'native-image' # add when starting native builds.
+          components: 'js'
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Configure: cache for maven dependencies'
         uses: actions/cache@v3
@@ -357,7 +357,7 @@ jobs:
         with:
           version: 'latest'
           java-version: ${{ needs.parameters.outputs.jdk_build }}
-#          components: 'native-image' # add when starting native builds.
+          components: 'js'
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Configure: cache for maven dependencies'
         uses: actions/cache@v3
@@ -437,7 +437,7 @@ jobs:
         with:
           version: 'latest'
           java-version: ${{ needs.parameters.outputs.jdk_build }}
-#          components: 'native-image' # add when starting native builds.
+          components: 'js'
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Configure: cache for maven dependencies'
         uses: actions/cache@v3
@@ -514,7 +514,7 @@ jobs:
         with:
           version: 'latest'
           java-version: ${{ needs.parameters.outputs.jdk_build }}
-          #          components: 'native-image' # add when starting native builds.
+          components: 'js'
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Configure: cache for maven dependencies'
         uses: actions/cache@v3
