--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -34,7 +34,7 @@ jobs:
         with:
           version: 'latest'
           java-version: '17'
-          #          components: 'native-image' # add when starting native builds.
+          components: 'js'
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Configure: cache for maven dependencies'
         uses: actions/cache@v3
