Removed Spring Cloud Sleuth. Ensure metrics are disabled by default.

--- a/applications/processor/image-recognition-processor/src/main/resources/application.yml
+++ b/applications/processor/image-recognition-processor/src/main/resources/application.yml
@@ -9,3 +9,8 @@ spring:
     cloud:
         function:
             definition: imageRecognitionFunction
+management:
+  defaults:
+    metrics:
+      export:
+        enabled: false
