--- a/applications/stream-applications-core/stream-applications-composite-function-support/pom.xml
+++ b/applications/stream-applications-core/stream-applications-composite-function-support/pom.xml
@@ -58,4 +58,16 @@
 			<version>${java-functions.version}</version>
 		</dependency>
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>3.0.0</version>
+				<configuration>
+					<skip>false</skip>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
