--- a/applications/stream-applications-core/stream-applications-test-support/pom.xml
+++ b/applications/stream-applications-core/stream-applications-test-support/pom.xml
@@ -84,5 +84,17 @@
 			<version>${apache-httpclient.version}</version>
 		</dependency>
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>3.0.0</version>
+				<configuration>
+					<skip>false</skip>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
