GH-370: Enable ScriptProcessor tests back (#419)
* GH-370: Enable ScriptProcessor tests back

Fixes https://github.com/spring-cloud/stream-applications/issues/370

* Update dependencies for `script-processor`
* Add `maven-surefire-plugin` to `script-processor` POM
and specify `--add-opens` for Ruby requirements
* Mark all JavaScript tests with `@EnabledIfSystemProperty`
against `org.graalvm.language.js.home` which is available only
if GraalVM with `js` component enabled
* Fix `NewlineAtEndOfFile` rule for Checkstyle since on Windows
the line end is `crlf`
* Add `components: 'js'` to GraalVM installation steps for all the GH action scripts

* * Add dependencies for `graal-sdk` and `org.graalvm.js`
to make JavaScript working on a plain JVM

--- a/applications/processor/script-processor/pom.xml
+++ b/applications/processor/script-processor/pom.xml
@@ -15,15 +15,27 @@
     </parent>
 
     <properties>
-        <jruby-complete.version>9.0.5.0</jruby-complete.version>
-        <jython-standalone.version>2.7.2</jython-standalone.version>
+        <jruby-complete.version>9.3.9.0</jruby-complete.version>
+        <jython-standalone.version>2.7.3</jython-standalone.version>
         <apache-ivy.version>2.5.1</apache-ivy.version>
+        <graalvm.version>22.3.0</graalvm.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.integration</groupId>
             <artifactId>spring-integration-groovy</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.graalvm.sdk</groupId>
+            <artifactId>graal-sdk</artifactId>
+            <version>${graalvm.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.graalvm.js</groupId>
+            <artifactId>js</artifactId>
+            <version>${graalvm.version}</version>
         </dependency>
 
         <dependency>
@@ -78,6 +90,17 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        --add-opens java.base/sun.nio.ch=ALL-UNNAMED
+                        --add-opens java.base/java.io=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
