--- a/scripts/k8s/runners-stream-ci-auto.yaml
+++ b/scripts/k8s/runners-stream-ci-auto.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   template:
     spec:
-      image: 'summerwind/actions-runner-dind:latest'
+      image: 'summerwind/actions-runner-dind:tag-placeholder'
       priorityClassName: high-priority
       dockerdWithinRunnerContainer: true
       imagePullPolicy: IfNotPresent
