Change controller-manager-secret to controller-manager to use default.

--- a/scripts/arc/values.yml
+++ b/scripts/arc/values.yml
@@ -1,14 +1,14 @@
 syncPeriod: 2m
 authSecret:
   create: false
-  name: controller-manager-secret
+  name: controller-manager
 priorityClassName: high-priority
 imagePullSecrets:
   - name: scdf-metadata-default
 githubWebhookServer:
   priorityClassName: high-priority
   secret:
-    name: controller-manager-secret
+    name: controller-manager
   enabled: true
 image:
   tag: v0.26.0
