--- a/scripts/k8s/runners-stream-ci-auto-template.yaml
+++ b/scripts/k8s/runners-stream-ci-auto-template.yaml
@@ -14,7 +14,7 @@ spec:
       repository: spring-cloud/stream-applications
       githubAPICredentialsFrom:
         secretRef:
-          name: controller-manager-secret
+          name: controller-manager
       resources:
         requests:
           cpu: "1500m"
@@ -29,7 +29,7 @@ metadata:
 spec:
   githubAPICredentialsFrom:
     secretRef:
-      name: controller-manager-secret
+      name: controller-manager
   minReplicas: min-replicas-placeholder
   maxReplicas: max-replicas-placeholder
   scaleTargetRef:
