--- a/functions/function/object-detection-function/pom.xml
+++ b/functions/function/object-detection-function/pom.xml
@@ -13,7 +13,9 @@
 	<artifactId>object-detection-function</artifactId>
 	<name>object-detection-function</name>
 	<description>Spring Native Function for Tensorflow Integration</description>
-
+	<properties>
+		<protobuf.version>3.19.6</protobuf.version>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.cloud.fn</groupId>
@@ -23,7 +25,7 @@
 		<dependency>
 			<groupId>com.google.protobuf</groupId>
 			<artifactId>protobuf-java</artifactId>
-			<version>3.19.6</version>
+			<version>${protobuf.version}</version>
 		</dependency>
 	</dependencies>
 
@@ -52,6 +54,7 @@
 									<outputDirectory>src/main/java</outputDirectory>
 								</outputTarget>
 							</outputTargets>
+							<protocArtifact>com.google.protobuf:protoc:${protobuf.version}</protocArtifact>
 						</configuration>
 					</execution>
 				</executions>
