--- a/functions/supplier/websocket-supplier/pom.xml
+++ b/functions/supplier/websocket-supplier/pom.xml
@@ -28,6 +28,12 @@
             <artifactId>spring-boot-starter-security</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud.fn</groupId>
+            <artifactId>function-test-support</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
