--- a/scripts/k8s/runners-stream-ci-manual-template.yaml
+++ b/scripts/k8s/runners-stream-ci-manual-template.yaml
@@ -6,6 +6,7 @@ spec:
   replicas: replicas-placeholder
   template:
     spec:
+      repository: spring-cloud/stream-applications
       image: 'summerwind/actions-runner-dind:tag-placeholder'
       dockerdWithinRunnerContainer: true
       priorityClassName: high-priority
