Update Maven protoc plugin

--- a/functions/function/object-detection-function/pom.xml
+++ b/functions/function/object-detection-function/pom.xml
@@ -27,8 +27,8 @@
 			<plugin>
 				<groupId>com.github.os72</groupId>
 				<artifactId>protoc-jar-maven-plugin</artifactId>
-				<!-- NOTE upgrading with versions above 3.8.0 generates incompatible for protobuf-java:3.5.1 comming with TF 1.15.0 -->
-				<version>3.7.0</version>
+				<!-- NOTE upgrading with versions above 3.8.0 generates incompatible for protobuf-java:3.5.1 coming with TF 1.15.0 -->
+				<version>3.11.4</version>
 				<executions>
 					<execution>
 						<phase>generate-sources</phase>
@@ -47,6 +47,7 @@
 									<outputDirectory>src/main/java</outputDirectory>
 								</outputTarget>
 							</outputTargets>
+							<protocArtifact>com.google.protobuf:protoc:${protobuf.version}</protocArtifact>
 						</configuration>
 					</execution>
 				</executions>
