--- a/functions/function/object-detection-function/pom.xml
+++ b/functions/function/object-detection-function/pom.xml
@@ -21,7 +21,9 @@
 			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
-
+	<properties>
+		<protobuf.version>3.19.6</protobuf.version>
+	</properties>
 	<build>
 		<plugins>
 			<plugin>
