--- a/functions/function/object-detection-function/pom.xml
+++ b/functions/function/object-detection-function/pom.xml
@@ -13,17 +13,22 @@
 	<artifactId>object-detection-function</artifactId>
 	<name>object-detection-function</name>
 	<description>Spring Native Function for Tensorflow Integration</description>
-
+	<properties>
+		<protobuf.version>3.19.6</protobuf.version>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.cloud.fn</groupId>
 			<artifactId>tensorflow-common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.protobuf</groupId>
+			<artifactId>protobuf-java</artifactId>
+			<version>${protobuf.version}</version>
+		</dependency>
 	</dependencies>
-	<properties>
-		<protobuf.version>3.19.6</protobuf.version>
-	</properties>
+
 	<build>
 		<plugins>
 			<plugin>
