--- a/stream-applications-build/pom.xml
+++ b/stream-applications-build/pom.xml
@@ -43,7 +43,7 @@
         <spring-cloud.version>2022.0.0</spring-cloud.version>
         <spring-cloud-starters.version>4.0.0</spring-cloud-starters.version>
         <spring-cloud-function.version>4.0.0</spring-cloud-function.version>
-        <spring-cloud-stream-dependencies.version>4.0.0</spring-cloud-stream-dependencies.version>
+        <spring-cloud-stream-dependencies.version>4.0.1-SNAPSHOT</spring-cloud-stream-dependencies.version>
         <spring-cloud-stream.version>4.0.0</spring-cloud-stream.version>
         <test-containers.version>1.17.6</test-containers.version>
         <mockserver.version>5.13.2</mockserver.version>
