--- a/stream-applications-release-train/stream-applications-docs/pom.xml
+++ b/stream-applications-release-train/stream-applications-docs/pom.xml
@@ -12,7 +12,7 @@
     </parent>
 
     <properties>
-        <docs.resources.version>0.2.1.RELEASE</docs.resources.version>
+        <docs.resources.version>0.2.5</docs.resources.version>
     </properties>
 
     <dependencies>
